<resources>
    <string name="app_name">Local Market App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_price">Price</string>
    <string name="prompt_category">Category</string>
    <string name="prompt_image">Image</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome_text">Welcome to Local Market App!</string>
    <string name="shop_activity">Shop</string>
    <string name="sell_activity">Sell</string>
    <string name="login_failed">"Login failed"</string>
    <string name="category_1">Fresh Produce</string>
    <string name="category_2">Dairy</string>
    <string name="category_3">Non Perishable</string>
    <string name="category_4">Home Tools</string>
    <string name="category_5">Cleaning Products</string>
</resources>
